--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,25 +1,27 @@
 apply plugin: "com.android.application"
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 33
 
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 25
+        minSdkVersion 16
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0.0"
     }
     buildTypes {
-      release {
-        minifyEnabled false
-        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-      }
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+    }
+    lintOptions {
+        abortOnError true
+        showAll true
     }
 }
 
 dependencies {
-    compile project(':ratethisapp')
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    implementation project(':ratethisapp')
+    implementation 'androidx.appcompat:appcompat:1.5.1'
 }
